# flynetDemo

./: .gitignore  README.md  basestation.sh  drone.sh  listenToDrone.tar  rabbitmq.tar  sendToBasestation.tar
basestation/: basestation.sh  docker-compose.yml  listenToDrone.tar
basestation/listenToDrone/: config.ini  config.ini.example  listenToDrone.py
basestation/rabbitmq/etc/: definitions.json  rabbitmq.conf
basestation/visualization/: index.html  main.js  state.json  style.css  visualization.py
core/: core.sh  docker-compose.yml  kubeadm-config.yaml  rabbitmq.tar  server-deployment.yaml
core/deploy/: client-deployment.yaml  ffmpeg4-deployment.yaml  server-deployment.yaml
core/rabbitmq/etc/: definitions.json
drone/: drone.sh  listenToBasestation.tar  sendToBasestation.tar  video_client.py
drone/listenToBasestation/: config.ini  listenToBasestation.py
drone/sendToBasestation/: config.ini  sendToBasestation.py
drone/yolo-client/: Dockerfile  docker-entrypoint.sh  requirements.txt  video_client.py
listenToBasestation/: config.ini
sendToBasestation/: sendToBasestation.py
videoAnalytics/: README  README.md
videoAnalytics/data/: README
videoAnalytics/experiments/detectionmodule/: Dockerfile  README.md  bad.list  commands.txt
videoAnalytics/experiments/detectionmodule/examples/: detector.c
videoAnalytics/experiments/detectionmodule/output/: 00000002.jpg.txt  00000004.jpg.txt  00000005.jpg.txt  00000007.jpg.txt  00000008.jpg.txt  00000009.jpg.txt  00000012.jpg.txt  00000015.jpg.txt  00000016.jpg.txt  00000017.jpg.txt  00000022.jpg.txt  00000023.jpg.txt  00000024.jpg.txt  00000027.jpg.txt  00000032.jpg.txt  00000034.jpg.txt  00000038.jpg.txt  00000039.jpg.txt  00000040.jpg.txt  00000041.jpg.txt  00000042.jpg.txt  00000043.jpg.txt  00000044.jpg.txt  00000045.jpg.txt  00000047.jpg.txt  00000048.jpg.txt  00000051.jpg.txt  00000053.jpg.txt  00000056.jpg.txt  00000061.jpg.txt  00000062.jpg.txt  00000065.jpg.txt  00000067.jpg.txt  00000068.jpg.txt  00000070.jpg.txt  00000078.jpg.txt  00000079.jpg.txt  00000083.jpg.txt  00000090.jpg.txt  00000092.jpg.txt  (+33 more)
videoAnalytics/experiments/detectionmodule/vividDatasetoutput/: frame00158.jpg.txt  frame00159.jpg.txt  frame01783.jpg.txt  frame01796.jpg.txt  frame01798.jpg.txt
videoAnalytics/experiments/motionmodule/: CMakeLists.txt  Dockerfile  FluxCudaKernels.cu  FluxCudaKernels.h  README.md  commands.txt  filelisting_RP.cxx  filelisting_RP.h  flux.cxx  flux.h  flux_util.cxx  flux_util.h  motion_main.cpp  nvtx.h
videoAnalytics/experiments/motionmodule/npp/: Exceptions.h  Image.h  NPPImage.cxx
videoAnalytics/experiments/trackingmodule/: Dockerfile  README.md  TrackingFusion  commands.txt  frame00000.jpg.txt
videoAnalytics/experiments/trackingmodule/inputdetection/: 00000001.jpg.txt  00000003.jpg.txt  00000006.jpg.txt  00000010.jpg.txt  00000011.jpg.txt  00000013.jpg.txt  00000014.jpg.txt  00000018.jpg.txt  00000019.jpg.txt  00000020.jpg.txt  00000021.jpg.txt  00000025.jpg.txt  00000026.jpg.txt  (+70 more)
worker/: worker.sh
(+156 files in other folders)
